force-app-metadata-removed/main/default/objects/Questionnaire__c/Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Questionnaire</label>
    <nameField>
        <displayFormat>Q-{00000000}</displayFormat>
        <label>Questionnaire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>