force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/Appointment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_Time__c</fullName>
    <formula>Appointment__r.Start_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Date/Time</label>
    <type>DateTime</type>
</CustomField>