force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/Appointment_Number__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Number__c</fullName>
    <formula>Appointment__r.Appointment_Number__c</formula>
    <label>Appointment Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>