force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/AppointmentCaseId__c.field-meta.xml
<CustomField>
    <fullName>AppointmentCaseId__c</fullName>
    <formula>CASESAFEID(Appointment__r.Case__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment_Case_Id</label>
    <type>Text</type>
</CustomField>