force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/AppointmentContactId__c.field-meta.xml
<CustomField>
    <fullName>AppointmentContactId__c</fullName>
    <formula>Appointment__r.Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Contact Id</label>
    <type>Text</type>
</CustomField>