force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/Attended_Appointment_Number__c.field-meta.xml
<CustomField>
    <fullName>Attended_Appointment_Number__c</fullName>
    <formula>Appointment__r.Attended_Appointment_Number__c</formula>
    <label>Attended Appointment Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>