force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/Clinical_Score__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Score__c</fullName>
    <description>Clinical score used for Core 10 (CX)*.
Below is covered by calculate questionnaire scores process builder
* Procedure: Add together the item scores, then divide by the number of questions completed to get the mean score,      then multiply by 10 to get the Clinical Score.   Quick method for the CORE-10 (if all items completed): Add together the item scores to get the Clinical Score.</description>
    <label>Clinical Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>