force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/CX_I_have_felt_able_to_cope_when__c.field-meta.xml
<CustomField>
    <fullName>CX_I_have_felt_able_to_cope_when__c</fullName>
    <inlineHelpText>I have felt able to cope when things go wrong</inlineHelpText>
    <label>3. I have felt able to cope when...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Core10</valueSetName>
    </valueSet>
</CustomField>