force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/CX_I_have_felt_despairing_or_hopeless__c.field-meta.xml
<CustomField>
    <fullName>CX_I_have_felt_despairing_or_hopeless__c</fullName>
    <label>8. I have felt despairing or hopeless</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Core10</valueSetName>
    </valueSet>
</CustomField>