force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/CX_I_have_felt_unhappy__c.field-meta.xml
<CustomField>
    <fullName>CX_I_have_felt_unhappy__c</fullName>
    <label>9.I have felt unhappy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Core10</valueSetName>
    </valueSet>
</CustomField>