force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/CX_I_have_had_difficulty_getting_to__c.field-meta.xml
<CustomField>
    <fullName>CX_I_have_had_difficulty_getting_to__c</fullName>
    <inlineHelpText>I have had difficulty getting to sleep or staying asleep</inlineHelpText>
    <label>7. I have had difficulty getting to...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Core10</valueSetName>
    </valueSet>
</CustomField>