force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/CX_I_have_made_plans_to_end_my_life__c.field-meta.xml
<CustomField>
    <fullName>CX_I_have_made_plans_to_end_my_life__c</fullName>
    <label>6. I have made plans to end my life</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Core10</valueSetName>
    </valueSet>
</CustomField>