force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/CX_Talking_to_people_has_felt_too_c__c.field-meta.xml
<CustomField>
    <fullName>CX_Talking_to_people_has_felt_too_c__c</fullName>
    <description>Talking to people has felt too much for me</description>
    <inlineHelpText>Talking to people has felt too much for me</inlineHelpText>
    <label>4. Talking to people has felt to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Core10</valueSetName>
    </valueSet>
</CustomField>