force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/CX_Unwanted_images_or_memories_have_bee__c.field-meta.xml
<CustomField>
    <fullName>CX_Unwanted_images_or_memories_have_bee__c</fullName>
    <description>Unwanted images or memories have been distressing me</description>
    <inlineHelpText>Unwanted images or memories have been distressing me</inlineHelpText>
    <label>10. Unwanted images or memories have bee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Core10</valueSetName>
    </valueSet>
</CustomField>