force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/GAD7_Being_so_restless_that_it_is_hard__c.field-meta.xml
<CustomField>
    <fullName>GAD7_Being_so_restless_that_it_is_hard__c</fullName>
    <inlineHelpText>Being so restless that it is hard to sit still</inlineHelpText>
    <label>5. Being so restless that it is hard...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>