force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/GAD7_Feeling_afraid_as_if_something__c.field-meta.xml
<CustomField>
    <fullName>GAD7_Feeling_afraid_as_if_something__c</fullName>
    <inlineHelpText>Feeling afraid as if something awful might happen</inlineHelpText>
    <label>7. Feeling afraid as if something ...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>