force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/GAD7_Not_being_able_to_stop_or_control__c.field-meta.xml
<CustomField>
    <fullName>GAD7_Not_being_able_to_stop_or_control__c</fullName>
    <inlineHelpText>Not being able to stop or control worrying</inlineHelpText>
    <label>2. Not being able to stop or control ...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>