force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/GAD7_Worrying_too_much_about_different__c.field-meta.xml
<CustomField>
    <fullName>GAD7_Worrying_too_much_about_different__c</fullName>
    <inlineHelpText>Worrying too much about different things</inlineHelpText>
    <label>3. Worrying too much about different...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>