force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/Num_Questions_Completed__c.field-meta.xml
<CustomField>
    <fullName>Num_Questions_Completed__c</fullName>
    <formula>IF( NOT(ISNULL(TEXT(CX_I_have_felt_tense_anxious__c))), 1, 0) +
 IF( NOT(ISNULL(TEXT(CX_I_have_felt_I_have_someone__c))), 1, 0) +
 IF( NOT(ISNULL(TEXT(CX_I_have_felt_able_to_cope_when__c))), 1, 0) +
 IF( NOT(ISNULL(TEXT(CX_Talking_to_people_has_felt_too_c__c ))), 1, 0) +
 IF( NOT(ISNULL(TEXT(CX_I_have_felt_panic_or_terror__c))),1, 0) +
 IF( NOT(ISNULL(TEXT(CX_I_have_made_plans_to_end_my_life__c))),1, 0) +
 IF( NOT(ISNULL(TEXT(CX_I_have_had_difficulty_getting_to__c))), 1, 0) +
 IF( NOT(ISNULL(TEXT(CX_I_have_felt_despairing_or_hopeless__c))), 1, 0) +
 IF( NOT(ISNULL(TEXT(CX_I_have_felt_unhappy__c))), 1, 0) +
 IF( NOT(ISNULL(TEXT(CX_Unwanted_images_or_memories_have_bee__c))), 1, 0)</formula>
    <label>No. Questions Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>