force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/PHQ9_Feeling_down_depressed_or_hopeless__c.field-meta.xml
<CustomField>
    <fullName>PHQ9_Feeling_down_depressed_or_hopeless__c</fullName>
    <label>2. Feeling down, depressed, or hopeless</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>