force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/PHQ9_Little_Interest_or_pleasure_in__c.field-meta.xml
<CustomField>
    <fullName>PHQ9_Little_Interest_or_pleasure_in__c</fullName>
    <inlineHelpText>1. Little interest or pleasure in doing things</inlineHelpText>
    <label>1. Little Interest or pleasure in ...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>