force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/PHQ9_Moving_or_speaking_so_slowly_that__c.field-meta.xml
<CustomField>
    <fullName>PHQ9_Moving_or_speaking_so_slowly_that__c</fullName>
    <inlineHelpText>8. Moving or speaking so slowly that other people could have noticed? Or the opposite — being so fidgety or restless that you have been moving around a lot more than usual</inlineHelpText>
    <label>8. Moving or speaking so slowly that...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>