force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/PHQ9_Poor_appetite_or_overeating__c.field-meta.xml
<CustomField>
    <fullName>PHQ9_Poor_appetite_or_overeating__c</fullName>
    <label>5. Poor appetite or overeating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>