force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/PHQ9_Thoughts_that_you_would_be_better__c.field-meta.xml
<CustomField>
    <fullName>PHQ9_Thoughts_that_you_would_be_better__c</fullName>
    <inlineHelpText>9. Thoughts that you would be better off dead or of hurting yourself in some way</inlineHelpText>
    <label>9. Thoughts that you would be better...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>