force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/PHQ9_Trouble_concentrating_on_things__c.field-meta.xml
<CustomField>
    <fullName>PHQ9_Trouble_concentrating_on_things__c</fullName>
    <inlineHelpText>7. Trouble concentrating on things, such as reading the newspaper or watching television</inlineHelpText>
    <label>7. Trouble concentrating on things ...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>