force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/Questionnaire_Declined__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Questionnaire Declined?</label>
    <type>Checkbox</type>
</CustomField>