force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/Reason_Declined__c.field-meta.xml
<CustomField>
    <fullName>Reason_Declined__c</fullName>
    <label>Reason Declined</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>