force-app-metadata-removed/main/default/objects/Questionnaire__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <label>Total Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>