force-app-metadata-removed/main/default/objects/Questionnaire__c/recordTypes/CORE10.recordType-meta.xml
<RecordType>
    <fullName>CORE10</fullName>
    <active>true</active>
    <label>CORE10</label>
</RecordType>