force-app-metadata-removed/main/default/objects/Questionnaire__c/recordTypes/GAD7.recordType-meta.xml
<RecordType>
    <fullName>GAD7</fullName>
    <active>true</active>
    <label>GAD7</label>
</RecordType>