force-app-metadata-removed/main/default/objects/Questionnaire__c/validationRules/Assessment_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Assessment_Validation</fullName>
    <active>false</active>
    <description>Validation to stop questionnaires being created against Helpline Appointments</description>
    <errorConditionFormula>Appointment__r.RecordType.Name = &apos;Assessment&apos;</errorConditionFormula>
    <errorMessage>You cannot create a Questionnaire on an assessment appointment</errorMessage>
</ValidationRule>